--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "jest"
   },
   "jest": {
+    "verbose": true,
+    "testLocationInResults": true,
     "transform": {
       "^.+\\.[t|j]sx?$": "babel-jest"
     }
