--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "index.ts"
   },
   "jest": {
     "verbose": true,
@@ -24,6 +25,7 @@
     "@types/jest": "^30.0.0",
     "babel-jest": "^30.2.0",
     "jest": "^30.2.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
 }
